@@ -741,6 +741,21 @@ argument_list|,
 name|families
 argument_list|)
 decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|3
+condition|;
+name|i
+operator|++
+control|)
+block|{
 name|addContent
 argument_list|(
 name|region
@@ -753,6 +768,7 @@ operator|.
 name|flushcache
 argument_list|()
 expr_stmt|;
+block|}
 name|byte
 index|[]
 name|splitRow
